k8s/applications/business/twenty/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: twenty
  namespace: twenty
spec:
  selector:
    app.kubernetes.io/name: twenty-server
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twenty
  namespace: twenty
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - crm.smadja.dev
  rules:
    - backendRefs:
        - name: twenty
          port: 80
